css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/**** General Styles *****/

html {
  font-size: 16px;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
  text-align: left;
}

ul,
ol {
  list-style-type: none;
}

a {
  color: #e2e3ed;
  text-decoration: none;
}

h2 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.875em;
}

h3,
h4 {
  font-family: 'Poppins', sans-serif;
  margin: 20px 0;
  font-size: 1.125em;
}

p{
  font-size: .875em;
  line-height: 1.285;
}

address {
  font-style: normal;
}

img {
  width: 100%;
}

figure {
  margin: 0;
}

.content-wrapper {
  width: 90%;
  margin: 50px 0;
}

/**** Base Styles ---- Header & Footer ****/

header,
footer {
  background-color: #202322;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

header {
  padding: 15px 0;
}

header .content-wrapper {
 display: flex;
 justify-content: center;
 align-items: center;
 flex-flow: row wrap;
 margin: 0;
}

header figure {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.header-divider {
  background: #3a3a3a;
  flex-flow: column;
  align-items: center;
  width: 100%;
  height: 1px;
  margin: 10px 0 20px 0;
}

header nav {
  width: 60%;
  font-size: 1.125em;
  font-weight: 700;
  text-transform: uppercase;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

header nav ul {
 display: flex;
 justify-content: space-around;
 width: 100%;
}

header nav ul li {
  font-size: 1.125em;
}

footer {
  flex-direction: column;
  text-align: center;
}

footer p {
  margin: 0;
}

footer  .content-wrapper {
 width: 55%;
 margin: 50px 0;
}

footer .contact {
 margin-bottom: 50px;
}

footer .social-icons {
 display: flex;
 justify-content: space-around;
 align-items: center;
}

footer .social-icons p {
 display: flex;
 justify-content: center;
 align-items: center;
}

footer .social-icons p i {
  font-size: 1.3125em;
}

footer .copyright {
  margin: 20px 0;
}

/**** Mobile Styles --- Homepage ****/

.hero-area {
  background: url('../img/hero-image.jpg') center no-repeat #333;
  background-size: cover;
  background-position: center;
  min-height: 500px;
  color: #ffffff;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

.hero-area h1 {
  font-size: 2.25em;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  line-height: 1.2;
}

aside {
  background-color: #527158;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

aside .form {
  margin-top: 30px;
}

input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
  padding: 1em;
}

input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}

/** Features **/

.features {
  background: url("../img/features-image.jpg");
  background-size: cover;
  background-position: center;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column;
}

.features h2 {
 margin-bottom: 10%;
}

.features article {
 width: 63%;
 margin: 30px 0;
}

.features .features-items {
 display: flex;
 justify-content: center;
 align-items: center;
 flex-flow: row wrap;
}

.features p {
 margin: 0;
}

.features i {
	font-size: 3.75em;
  margin-bottom: 40px;
}

.reviews {
  background-color: #2a423a;
  color: #ffffff;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

.reviews i {
	font-size: 3.75em;
  margin-bottom: 40px;
}

.reviews h2 {
  margin-bottom: 40px;
  line-height: 1;
}

.reviews h3 {
  width: 55%;
  margin: 20px 0;
}

/* ======================================================================
  About page
  ===================================================================== */

.mission {
  display: flex;
  justify-content:center;
  align-items: center;
  flex-flow: row wrap;
}
/* ... */

